# monod

./: .gitignore  Inference_Timing.ipynb  LICENSE  Monod_demo_colab.ipynb  Monod_demo_new.ipynb  README.md  nn_integration.ipynb  setup.cfg
src/monod/: analysis.py  cme_toolbox.py  cme_toolbox_new.py  drivers.py  extract_data.py  inference.py  mminference.py  nn_module.py  nn_toolbox.py  plot_aesthetics.py  preprocess.py
src/monod.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
src/monod/models/: 3hl_256hu_10bs_varmax_MODEL  3npdf_2hl_256hu_100bs_0.001lr_update_256_MODEL
src/monod/trained_models/: learn_weights_scale_joint_hellinger_5npdf_2hl_512hu_100bs_0.001lr_update_256
test/: desai_new.ipynb  desai_old.ipynb  simulation_colab.ipynb
test/fits/gg_240821_029_desai_1/: genes.csv
