[metadata]
name = monod
version = 0.2.2
author = Gennady Gorin, Lior Pachter
author_email = ggorin@caltech.edu, lpachter@caltech.edu
description = the Monod package fits CME models to sequencing data.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pachterlab/monod
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: Linux

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    pickle
    numpy
    scipy
    numdifftools
    pytz
    anndata
    loompy

[options.packages.find]
where = src

